--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,23 @@
 body{
-background-color: black;
+background: black;
 color:white;
+}
+/* footer{
+    margin: 10px 20px 20px;
+    padding: 20px,20px;
+    position: relative;
+    background: grey;
+    border-radius: 10px;
+} */
+section{
+    position: inherit;
+    margin: 15px 50px 15px;
+    padding: 10px,10px;
+    background: white;
+    border-radius: 10px;
+    color:black;
+}
+.logo{
+width: 75px;
+height: 75px;
 }
